--- a/mystyle.css
+++ b/mystyle.css
@@ -15,9 +15,32 @@ img{
 a{
     text-decoration: none;
 }
+h1,h2,h3{
+    text-transform: uppercase;
+}
+h3{
+    font-size: 12px;
+    letter-spacing: 3px;
+    font-weight: 700;
+}
 
 /*utilities*/
-
+p.read-btn{
+    letter-spacing: 6px;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
+}
+.container{
+width: 95%;
+margin: 10px auto;
+}
+.gray-text{
+    color: gray;
+}
+.black-text{
+    color: black;
+}
 /*menu*/
 nav.menu{
     align-items: center; /*vertical*/
@@ -58,8 +81,11 @@ nav.menu a.link-subs{
     background-color: black;
     color: white;
     padding:12px; 
+   transition-duration: 500ms;
+   
 
 }nav.menu a.link-subs:hover{
+   transform:(100%);
     background-color: #ffcc00;
     color: black;
 }
@@ -73,8 +99,6 @@ nav.menu a.link-arrows{
 header{
     height:250px;
    
-    
-    
 }
 header h1{
     font-size: 50px;
@@ -89,18 +113,145 @@ header p{
 }
 header .line{
     text-decoration-color: #ffcc00;
-
+    transition:ease-out 1s;
 }
 
 header .line:hover{
+    transform: translate(100%);
+    background-color: #ffcc00;
+    color: black;
+}
+
+header .line2{
+    text-decoration-thickness: 5px;
+    text-decoration-color: #ffcc00;
+    color: black;   
+}
+
+/*main news*/
+.main-news{
+    position: relative;
+    height: 400px;
+    margin-bottom: 20px;
+    
+}
+.main-news-img img{
+   height: 400px;
+}
+.main-news-text{
+    position: absolute;
+    top:200px;
+    left:30px;
+
+}
+.main-news-img{
+    overflow: hidden;
+}
+.main-news-img img:hover{
+    transform: scale(1.1);
+    cursor: pointer;
+    width:100%;
+}
+.main-news-text p.title{
+    font-size: 32px;
+    font-weight: 700;
+    margin:10px 0;
+    word-spacing: 2px;
+}
+.secondary-news{
+height: 450px;
+margin-left: 20px;
+
+}
+.secondary-news-img{
+height: 250px;
+overflow: hidden;
+
+}
+.secondary-news-img img{
+height: 100%;
+width:100%
+}
+.secondary-news-text{
+    height: 110px;
+    background-color: white;
+    padding:20px;
+    font-size:10px ;
+    font-weight: 700;
+    
+}
+.secondary-news-img img:hover{
+    transform: scale(1.1);
+    cursor: pointer;  
+}
+.secondary-news-text span{
+    text-decoration: underline;
+}
+.secondary-news-text p.title{
+    font-size: 22px;
+    margin: 10px 0 20px 0;
+    font-weight: 700;
+    line-height: 1.5;
+}
+/*todays picks*/
+h2{
+    font-size: 30px;
+    letter-spacing: 5px;
+    border-left: 5px solid #ffcc00;
+    padding-left: 20px;
+    margin:30px 0;
+    
+}
+.pick-items{
+    display:flex;
+    justify-content: space-between;
+    text-align: justify;
+    
+}
+.pick-items img{
+    width: 100px;
+    height: 100px;
+    margin-bottom: 20px;
+}
+.pick-items-text{
+    flex-basis: 78%;
+
+    
+}
+.pick-items-text p{
+    font-weight: 700;
+    margin-top: 10px;
+    
+}
+.pick-items-text h3{
+    font-weight: 700;
+}
+.pick-items-text:hover{
+   text-decoration: underline;
+}
+
+
+.see-more{
+    margin-top: 30px;
+    margin-bottom: 50px; 
+    text-align: center;
+border-left: none;
+
+}
+   
+   .end{
+    transition: ease-out 1s;
+    text-decoration: underline;
+    text-decoration-color: #ffcc00;
+    text-decoration-thickness:2px;
+     
+}
+
+
+.end:hover{
+    transform:(100%);
     background-color: #ffcc00;
     color: black;
     
 }
-header .line2{
-    text-decoration-thickness: 5px;
-    text-decoration-color: #ffcc00;
-    color: black;
-    
-    
-}
+   
